server/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moonkat
  labels:
    app: moonkat
spec:
  type: NodePort
  selector:
    app: moonkat
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
